new swagger for dashboard
